--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -46,6 +46,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -53,6 +54,7 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><button type="delete" class="btn btn-primary">Delete</button></td>
             </tr>
           <% } %>
         </tbody>
