--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -46,6 +46,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Update</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
@@ -55,9 +56,14 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
+                <form method="POST" action="/urls/<%= id %>/update">
+                  <a href="/urls/<%=id%>" class="btn  btn-warning">Edit</a> 
+                </form>
+              </td>
+              <td>
                 <form method="POST" action="/urls/<%= id %>/delete">
                   <!--<a href="/u/<%= id %>"><%= id %></a>-->
-                  <button type="delete" class="btn btn-primary">Delete</button>
+                  <button type="submit" class="btn btn-primary">Delete</button>
                   </form>
                   </td>
             </tr>
