--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -14,8 +14,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <form method="POST" action="/login">
+          <input
+            class="form-control"
+            type="text"
+            name="username"
+            placeholder="Username"
+            style="width: 300px; margin: 1em"
+          />
+          <button class="btn  btn-warning">Login</button>
+        </form>
       </div>
     </div>
   </nav>
