--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,19 +16,29 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form method="POST" action="/login">
-          <label for="username">Login:</label>
-          <input
-            class="form-control"
-            type="text"
-            name="username"
-            placeholder="Username"
-            style="width: 300px; margin: 1em"
-          />
-          
-          <%= username %>
-          <!--<button class="btn  btn-warning">Login</button>-->
+          <% if(username === undefined){ %>
+            <form class="form-inline" method="POST" action="/login">
+              <div class="form-group mb-2"></div>
+              <input
+                class="form-control"
+                type="text"
+                name="username"
+                placeholder="Username"
+                style="width: 300px"
+              />    
+          <button class="btn btn-outline-dark">Login</button>
+        </div>
         </form>
+      
+          <% } else{ %> 
+            <form class="form-inline" method="POST" action="/logout">
+              <div class="form-group mb-2"></div>
+              <h6>Logged in as: <%= username %></h6>
+              <button type="submit" class="btn btn-outline-dark">Logout</button>
+            </div>
+              </form>
+         <% } %>
+          
       </div>
     </div>
   </nav>
