Accepts registration of users

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -38,7 +38,11 @@
             </div>
               </form>
          <% } %>
-          
+         <form class="form-inline" method="POST" action="/register-page">
+          <div class="form-group mb-2"></div>
+          <button type="submit" class="btn btn-outline-dark">Register</button>
+        </div>
+          </form>
       </div>
     </div>
   </nav>
