--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -15,25 +15,32 @@
       crossorigin="anonymous"
     />
 
-    <title>New URL</title>
+    <title>Registration</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
+      <h3>Register New Account</h3>
+      <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
+          <!--<label for="email">Enter a URL:</label>-->
           <input
             class="form-control"
-            type="text"
-            name="longURL"
-            placeholder="http://"
+            type="email"
+            name="email"
+            placeholder="Email"
             style="width: 300px; margin: 1em"
           />
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="Password"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Register</button>
         </div>
       </form>
     </main>
