--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,7 +13,7 @@
 
   <body>
     <%- include('partials/_header') %>
-    <header>
+    <!--<header>
       <nav class="navbar navbar-expand-md navbar-dark bg-success">
         <a class="navbar-brand" href="/urls">TinyApp</a>
         <button
@@ -34,7 +34,7 @@
           </div>
         </div>
       </nav>
-    </header>
+    </header>-->
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
