Login/register work fully

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,28 +16,35 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-          <% if(username === undefined){ %>
-            <form class="form-inline" method="GET" action="/login">
+        </div>
+        </div>
+        <div class="collapse navbar-collapse justify-content-end">
+          <div class="navbar-nav">
+          <% if(user_id === undefined){ %>
+            
+            <a class="nav-item nav-link" href="/login">Login</a>
+            <!--<form class="form-inline" method="GET" action="/login">
               <div class="form-group mb-2"></div>
-              <!--<input
+              <input
                 class="form-control"
                 type="text"
-                name="username"
-                placeholder="Username"
+                name="user_id"
+                placeholder="user_id"
                 style="width: 300px"
-              />-->    
+              />  
           <button class="btn btn-outline-dark">Login</button>
         </div>
-        </form>
-        <form class="form-inline" method="GET" action="/register">
+        </form>-->
+            <a class="nav-item nav-link" href="/register">Register</a>
+        <!--<form class="form-inline" method="GET" action="/register">
           <div class="form-group mb-2"></div>
           <button type="submit" class="btn btn-outline-dark">Register</button>
         </div>
-          </form>
+          </form>-->
           <% } else{ %> 
             <form class="form-inline" method="POST" action="/logout">
               <div class="form-group mb-2"></div>
-              <h6>Logged in as: <%= username %></h6>
+              <span>Logged in as: <%= user_id %></span>
               <button type="submit" class="btn btn-outline-dark">Logout</button>
             </div>
               </form>
