--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,6 +26,7 @@
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <!--<label for="email">Enter a URL:</label>-->
+          <h5>Email address</h5>
           <input
             class="form-control"
             type="email"
@@ -33,6 +34,7 @@
             placeholder="Email"
             style="width: 300px; margin: 1em"
           />
+          <h5>Password</h5>
           <input
             class="form-control"
             type="password"
