--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -22,10 +22,11 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register New Account</h3>
+      <h3>Create Account</h3>
       <form class="form-inline" action="/register" method="POST">
         <div class="form-group mb-2">
           <!--<label for="email">Enter a URL:</label>-->
+          <h5>Email address</h5>
           <input
             class="form-control"
             type="email"
@@ -33,6 +34,7 @@
             placeholder="Email"
             style="width: 300px; margin: 1em"
           />
+          <h5>Password</h5>
           <input
             class="form-control"
             type="password"
