--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -55,7 +55,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td>
                 <form method="POST" action="/urls/<%= id %>/update">
                   <a href="/urls/<%=id%>" class="btn btn-outline-primary">Edit</a> 
