based on feedback, added changes for empty login, email login display, and redirects for the url/id page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -41,10 +41,10 @@
           <button type="submit" class="btn btn-outline-dark">Register</button>
         </div>
           </form>-->
-          <% } else{ %> 
+          <% } else { %> 
             <form class="form-inline" method="POST" action="/logout">
               <div class="form-group mb-2"></div>
-              <span>Logged in as: <%= user_id %></span>
+              <span>Logged in as: <%= email %></span>
               <button type="submit" class="btn btn-outline-dark">Logout</button>
             </div>
               </form>
